--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,7 +1,5 @@
 @import "../assets/css/variable.less";
 .main{
-    // width: @w-main;
-    // margin: 0 auto;
     background-image: url('../assets/img/bg.jpg');
     height:100%;
     background-size:100% auto;
@@ -9,4 +7,20 @@
         width: @w-main;
         margin: 0 auto;
     }
+}
+.title-box{
+    div{
+        display: inline-block;
+        text-align: center;
+        &.title-col{
+            height: 157px*@var;
+            width: 754px*@var;
+            background-image: url('../assets/img/title-bg.png');
+            background-size:100% 100%;
+        }
+        &.logo{
+            width: 285px*@var;
+        }
+    }
+
 }
