--- a/src/assets/css/variable.less
+++ b/src/assets/css/variable.less
@@ -1,6 +1,6 @@
  // Font Family
  @font-family: "PingFangSC-Regular",sans-serif, Arial,"Microsoft YaHei", "Droid Sans";
- @col-bg:rgb(236, 99, 99);
+ @col-bg:#fff;
  @f-content:13px;
  @col-text-base:#fff;
  @col-text-grey:#ACACAC;
