--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,7 +1,6 @@
 @import "../assets/css/variable.less";
 .main{
     background-image: url('../assets/img/bg.jpg');
-    height:100%;
     background-size:100% auto;
     .main-content{
         width: @w-main;
@@ -16,6 +15,7 @@
             height: 157px*@var;
             width: 754px*@var;
             background-image: url('../assets/img/title-bg.png');
+            background-repeat: repeat;
             background-size:100% 100%;
         }
         &.logo{
@@ -23,4 +23,17 @@
         }
     }
 
+}
+.list{
+    width:1188px;
+    min-height: 200px;
+    border: 30px double orange;
+    -webkit-border-image: url('../assets/img/border1.jpg') 40% 10% 30% 8% round;
+    border-image: url('../assets/img/border1.jpg') 40% 10% 30% 8% round;
+    .list-col{
+        text-align: center;
+    }
+}
+.rules-title{
+    
 }
