--- a/src/assets/css/variable.less
+++ b/src/assets/css/variable.less
@@ -1,5 +1,5 @@
  // Font Family
- @font-family: "PingFangSC-Regular",sans-serif, Arial,"Microsoft YaHei", "Droid Sans";
+ @font-family: "Microsoft YaHei",sans-serif, Arial,"PingFangSC-Regular", "Droid Sans";
  @col-bg:#fff;
  @f-content:13px;
  @col-text-base:#fff;
